5.17.1
FIXES
    - Tweak raid/party profiles and fix some bugs
    - You can now change raid/party profile settings while in a party/raid

MISC
    - Added option to show chat timestamps for all messages

5.17.0
NEW
    - CHAT:
        Added lots of new settings to the chat module
            - Detacting URL Links and make them clickable
            - A Keyword System, which marks your keywords in the chat and plays a sound
            - Classcoloring char names
            - Short Channel names
            - Emoticon's
            - Show role icons before the names (if you are in a raid or party)
            - Spam Intervall: Hides the same messages in a given time
            - Combat Repeate: Close the chat editbox if you type in the same char for a given number while in combat
            - Link Hovering: Shows the tooltip of eg a Achivment while hovering
            - Quick Join Messages: Show clickable Quick Join messages inside of the chat
    - Added a new "Role Bar" which shows your group or raid's role composition
    - Added a new "Missing Raud Buff Bar" which shows you your missing raind buffs. You can also track one custom buff
    - Added tooltipt to the "Important Debuff" Dropdown
    - Added Season 2 "Important Debuffs"
    - Merchant skin
    - Added grid layouts for raid and party
    - Added option to set a scale value for important dungeon and raid debuffs
    - Added option to set a scale value for dispellable debuffs
    - Added option "Show both party frames and party grid"
    - Added option to show M+ keystone info in tooltip

FIXES
    - Display Animapower frame in M+ and raids correctly
    - Fix a lua error in Torghast
    - Small layout fixes

5.16.4
FIXES
    - Social tab fixes

5.16.3
FIXES
    - Gossip skin issue
    - Smaller fixes

5.16.2
FIXES
    - Gossip skin issue
    - Issue with bag bars
    - Some Torghast issues

5.16.1
FIXES
    - Torghast tracker fixes

5.16.0
NEW
    - Added social module