@@ -404,7 +404,7 @@ GW_DEFAULT["CHAT_SPAM_INTERVAL_TIMER"] = 5
 GW_DEFAULT["CHAT_INCOMBAT_TEXT_REPEAT"] = 5
 GW_DEFAULT["CHAT_CLASS_COLOR_MENTIONS"] = true
 GW_DEFAULT["CHAT_KEYWORDS"] = "%MYNAME%"
-GW_DEFAULT["CHAT_KEYWORDS_ALERT"] = true
+GW_DEFAULT["CHAT_KEYWORDS_ALERT_NEW"] = "GW2_UI: Ping"
 GW_DEFAULT["CHAT_KEYWORDS_ALERT_COLOR"] = {r = .5, g = .5, b = .5}
 GW_DEFAULT["CHAT_KEYWORDS_EMOJI"] = true
 GW_DEFAULT["CHAT_SOCIAL_LINK"] = true
