@@ -64,6 +64,7 @@ local function CreateRaidProfiles(panel)
     panel.selectProfile.raid.string:SetFont(UNIT_NAME_FONT, 12)
     panel.selectProfile.raid.string:SetText(RAID)
     panel.selectProfile.raid.checkbutton:Hide()
+    panel.selectProfile.raid.soundButton:Hide()
     panel.selectProfile.raid.string:ClearAllPoints()
     panel.selectProfile.raid.string:SetPoint("LEFT", 5, 0)
     panel.selectProfile.raid.type = "RAID"
@@ -89,6 +90,7 @@ local function CreateRaidProfiles(panel)
     panel.selectProfile.party.string:SetFont(UNIT_NAME_FONT, 12)
     panel.selectProfile.party.string:SetText(PARTY)
     panel.selectProfile.party.checkbutton:Hide()
+    panel.selectProfile.party.soundButton:Hide()
     panel.selectProfile.party.string:ClearAllPoints()
     panel.selectProfile.party.string:SetPoint("LEFT", 5, 0)
     panel.selectProfile.party.type = "PARTY"
